--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>MWDiag</class>
- <widget class="QWidget" name="MWDiag">
-  <property name="geometry">
+ <widget class="QWidget" name="MWDiag" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,69 +9,109 @@
     <height>503</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_3">
+  <property name="styleSheet" >
+   <string notr="true" />
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout_3" >
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout" >
      <item>
-      <widget class="QLabel" name="lbIFile">
-       <property name="enabled">
+      <widget class="QLabel" name="lbIFile" >
+       <property name="enabled" >
         <bool>true</bool>
        </property>
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Expanding" hsizetype="Maximum" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="maximumSize">
+       <property name="maximumSize" >
         <size>
          <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
-       <property name="text">
+       <property name="text" >
         <string>Hard Mask File</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="leIFile">
-       <property name="enabled">
+      <widget class="QLineEdit" name="leIFile" >
+       <property name="enabled" >
         <bool>true</bool>
        </property>
-       <property name="minimumSize">
+       <property name="minimumSize" >
         <size>
          <width>0</width>
          <height>20</height>
         </size>
        </property>
-       <property name="text">
+       <property name="text" >
         <string/>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="valInmsk">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <widget class="QLabel" name="valInmsk" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="text">
+       <property name="palette" >
+        <palette>
+         <active>
+          <colorrole role="WindowText" >
+           <brush brushstyle="SolidPattern" >
+            <color alpha="255" >
+             <red>170</red>
+             <green>0</green>
+             <blue>0</blue>
+            </color>
+           </brush>
+          </colorrole>
+         </active>
+         <inactive>
+          <colorrole role="WindowText" >
+           <brush brushstyle="SolidPattern" >
+            <color alpha="255" >
+             <red>170</red>
+             <green>0</green>
+             <blue>0</blue>
+            </color>
+           </brush>
+          </colorrole>
+         </inactive>
+         <disabled>
+          <colorrole role="WindowText" >
+           <brush brushstyle="SolidPattern" >
+            <color alpha="255" >
+             <red>118</red>
+             <green>116</green>
+             <blue>108</blue>
+            </color>
+           </brush>
+          </colorrole>
+         </disabled>
+        </palette>
+       </property>
+       <property name="text" >
         <string>*</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pbIFile">
-       <property name="enabled">
+      <widget class="QPushButton" name="pbIFile" >
+       <property name="enabled" >
         <bool>true</bool>
        </property>
-       <property name="text">
+       <property name="text" >
         <string>Browse</string>
        </property>
       </widget>
@@ -80,32 +119,32 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QHBoxLayout" name="horizontalLayout_2" >
      <item>
-      <widget class="QLabel" name="lbOFile">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+      <widget class="QLabel" name="lbOFile" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Expanding" hsizetype="Maximum" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="maximumSize">
+       <property name="maximumSize" >
         <size>
          <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
-       <property name="text">
+       <property name="text" >
         <string>Output Mask    </string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="leOFile"/>
+      <widget class="QLineEdit" name="leOFile" />
      </item>
      <item>
-      <widget class="QPushButton" name="pbOFile">
-       <property name="text">
+      <widget class="QPushButton" name="pbOFile" >
+       <property name="text" >
         <string>Browse</string>
        </property>
       </widget>
@@ -113,38 +152,38 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <layout class="QHBoxLayout" name="horizontalLayout_3" >
      <item>
-      <widget class="QLabel" name="lbSignificance">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+      <widget class="QLabel" name="lbSignificance" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Expanding" hsizetype="Maximum" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="maximumSize">
+       <property name="maximumSize" >
         <size>
          <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
-       <property name="text">
+       <property name="text" >
         <string>Errorbar Criterion</string>
        </property>
-       <property name="wordWrap">
+       <property name="wordWrap" >
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="leSignificance">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+      <widget class="QLineEdit" name="leSignificance" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
          <horstretch>63</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="maximumSize">
+       <property name="maximumSize" >
         <size>
          <width>65</width>
          <height>16777215</height>
@@ -153,27 +192,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="valErr">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>*</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_15">
-       <property name="orientation">
+      <spacer name="horizontalSpacer_15" >
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType">
+       <property name="sizeType" >
         <enum>QSizePolicy::Fixed</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>20</width>
          <height>20</height>
@@ -182,21 +208,21 @@
       </spacer>
      </item>
      <item>
-      <widget class="QCheckBox" name="ckAngles">
-       <property name="enabled">
+      <widget class="QCheckBox" name="ckAngles" >
+       <property name="enabled" >
         <bool>false</bool>
        </property>
-       <property name="text">
+       <property name="text" >
         <string>No Solid Angles</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
+      <spacer name="horizontalSpacer_2" >
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -207,59 +233,59 @@
     </layout>
    </item>
    <item>
-    <widget class="QGroupBox" name="gbIndividual">
-     <property name="title">
+    <widget class="QGroupBox" name="gbIndividual" >
+     <property name="title" >
       <string>Individual White Beam Tests</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout" >
       <item>
-       <layout class="QHBoxLayout" name="indivTestWhiteLay"/>
+       <layout class="QHBoxLayout" name="indivTestWhiteLay" />
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <layout class="QHBoxLayout" name="horizontalLayout_5" >
         <item>
-         <widget class="QLabel" name="lbHighAbs">
-          <property name="text">
+         <widget class="QLabel" name="lbHighAbs" >
+          <property name="text" >
            <string>High counts</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="leHighAbs"/>
+         <widget class="QLineEdit" name="leHighAbs" />
         </item>
         <item>
-         <widget class="QLabel" name="lbLowAbs">
-          <property name="text">
+         <widget class="QLabel" name="lbLowAbs" >
+          <property name="text" >
            <string>Low counts</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="leLowAbs"/>
+         <widget class="QLineEdit" name="leLowAbs" />
         </item>
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <layout class="QHBoxLayout" name="horizontalLayout_6" >
         <item>
-         <widget class="QLabel" name="lbHighMed">
-          <property name="text">
+         <widget class="QLabel" name="lbHighMed" >
+          <property name="text" >
            <string>Median test high</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="leHighMed"/>
+         <widget class="QLineEdit" name="leHighMed" />
         </item>
         <item>
-         <widget class="QLabel" name="lbLowMed">
-          <property name="text">
+         <widget class="QLabel" name="lbLowMed" >
+          <property name="text" >
            <string>Median test low</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="leLowMed"/>
+         <widget class="QLineEdit" name="leLowMed" />
         </item>
        </layout>
       </item>
@@ -267,41 +293,41 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="gbVariation">
-     <property name="title">
+    <widget class="QGroupBox" name="gbVariation" >
+     <property name="title" >
       <string>Efficiency Variation Test</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_2" >
       <item>
-       <layout class="QHBoxLayout" name="effVarTestWhiteLay"/>
+       <layout class="QHBoxLayout" name="effVarTestWhiteLay" />
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <layout class="QHBoxLayout" name="horizontalLayout_4" >
         <item>
-         <widget class="QLabel" name="lbVariation">
-          <property name="text">
+         <widget class="QLabel" name="lbVariation" >
+          <property name="text" >
            <string>Proportional change criterion</string>
           </property>
-          <property name="wordWrap">
+          <property name="wordWrap" >
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="leVariation">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <widget class="QLineEdit" name="leVariation" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize">
+          <property name="minimumSize" >
            <size>
             <width>0</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize">
+          <property name="maximumSize" >
            <size>
             <width>70</width>
             <height>16777215</height>
@@ -310,11 +336,11 @@
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
+         <spacer name="horizontalSpacer" >
+          <property name="orientation" >
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeHint" stdset="0">
+          <property name="sizeHint" stdset="0" >
            <size>
             <width>40</width>
             <height>20</height>
@@ -328,64 +354,64 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="gbBackTest">
-     <property name="title">
+    <widget class="QGroupBox" name="gbBackTest" >
+     <property name="title" >
       <string>Background check</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0" colspan="2">
-       <widget class="QCheckBox" name="ckDoBack">
-        <property name="text">
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" colspan="2" >
+       <widget class="QCheckBox" name="ckDoBack" >
+        <property name="text" >
          <string>Check backgrounds</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2" colspan="2">
-       <widget class="QLabel" name="lbAcceptance">
-        <property name="text">
+      <item row="0" column="2" colspan="2" >
+       <widget class="QLabel" name="lbAcceptance" >
+        <property name="text" >
          <string>Acceptance Factor</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="4">
-       <widget class="QLineEdit" name="leAcceptance"/>
+      <item row="0" column="4" >
+       <widget class="QLineEdit" name="leAcceptance" />
       </item>
-      <item row="0" column="5">
-       <widget class="QLabel" name="validator_label_3">
-        <property name="minimumSize">
+      <item row="0" column="5" >
+       <widget class="QLabel" name="validator_label_3" >
+        <property name="minimumSize" >
          <size>
           <width>20</width>
           <height>20</height>
          </size>
         </property>
-        <property name="text">
+        <property name="text" >
          <string/>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="lbStartTime">
-        <property name="text">
+      <item row="1" column="0" >
+       <widget class="QLabel" name="lbStartTime" >
+        <property name="text" >
          <string>Start TOF</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="QLineEdit" name="leStartTime"/>
+      <item row="1" column="1" colspan="2" >
+       <widget class="QLineEdit" name="leStartTime" />
       </item>
-      <item row="1" column="3">
-       <widget class="QLabel" name="lbEndTime">
-        <property name="text">
+      <item row="1" column="3" >
+       <widget class="QLabel" name="lbEndTime" >
+        <property name="text" >
          <string>End TOF</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="4">
-       <widget class="QLineEdit" name="leEndTime"/>
+      <item row="1" column="4" >
+       <widget class="QLineEdit" name="leEndTime" />
       </item>
-      <item row="2" column="0" colspan="3">
-       <widget class="QCheckBox" name="ckZeroCounts">
-        <property name="text">
+      <item row="2" column="0" colspan="3" >
+       <widget class="QCheckBox" name="ckZeroCounts" >
+        <property name="text" >
          <string>Reject zero background</string>
         </property>
        </widget>
@@ -394,11 +420,11 @@
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
+    <spacer name="verticalSpacer" >
+     <property name="orientation" >
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" stdset="0">
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
        <height>40</height>
