--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/MWRunFiles.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/MWRunFiles.ui
@@ -26,7 +26,7 @@
     <number>0</number>
    </property>
    <item row="0" column="1" >
-    <widget class="QLineEdit" name="leFiles" >
+    <widget class="QLineEdit" name="fileEditor" >
      <property name="sizePolicy" >
       <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
        <horstretch>0</horstretch>
@@ -43,20 +43,57 @@
        <verstretch>20</verstretch>
       </sizepolicy>
      </property>
+     <property name="palette" >
+      <palette>
+       <active>
+        <colorrole role="WindowText" >
+         <brush brushstyle="SolidPattern" >
+          <color alpha="255" >
+           <red>170</red>
+           <green>0</green>
+           <blue>0</blue>
+          </color>
+         </brush>
+        </colorrole>
+       </active>
+       <inactive>
+        <colorrole role="WindowText" >
+         <brush brushstyle="SolidPattern" >
+          <color alpha="255" >
+           <red>170</red>
+           <green>0</green>
+           <blue>0</blue>
+          </color>
+         </brush>
+        </colorrole>
+       </inactive>
+       <disabled>
+        <colorrole role="WindowText" >
+         <brush brushstyle="SolidPattern" >
+          <color alpha="255" >
+           <red>118</red>
+           <green>116</green>
+           <blue>108</blue>
+          </color>
+         </brush>
+        </colorrole>
+       </disabled>
+      </palette>
+     </property>
      <property name="text" >
       <string>*</string>
      </property>
     </widget>
    </item>
    <item row="0" column="3" >
-    <widget class="QPushButton" name="pbBrowse" >
+    <widget class="QPushButton" name="browseBtn" >
      <property name="text" >
       <string>Browse</string>
      </property>
     </widget>
    </item>
    <item row="0" column="0" >
-    <widget class="QLabel" name="lbDiscrip" >
+    <widget class="QLabel" name="textLabel" >
      <property name="text" >
       <string>Files</string>
      </property>
